DHFPROD-3922: Move in flow run logic
